# People_Remover

./: CMakeLists.txt  README.md
src/: api.cpp  api.h  filler.cpp  filler.h  global.cpp  global.h  main.cpp  people_detector.cpp  people_detector.h  segmentation.cpp  segmentation.h  selected_bounding_box.cpp  selected_bounding_box.h  simple_bounding_box.cpp  simple_bounding_box.h  simple_bounding_box_list.cpp  simple_bounding_box_list.h
